fix content overflow other 2 areas

--- a/html5/styles.css
+++ b/html5/styles.css
@@ -8,7 +8,7 @@ html body{
   }
 
 
-
+/* block position layouts */
 section{
     background-color: grey;
     position: fixed;
@@ -31,10 +31,18 @@ nav{
 
 main{
     background-color: wheat;
-    position: absolute;
-    top:50px;
-    left: 100px;
+    position: fixed;
+    margin-top:50px;
+    margin-left: 100px;
 
     width: 100%;
     height: 100%;
+}
+
+/* inside block specifications */
+
+section ul li{
+    display: inline;
+    float: right;
+    margin: 0.3em;
 }
